--- a/twitchtv/css/app.css
+++ b/twitchtv/css/app.css
@@ -14,6 +14,7 @@
 }
 .box img {
   height: 150px;
+  margin: 0.5em;
 }
 .box:last-child {
   margin-bottom: 2em;
@@ -22,7 +23,14 @@
 .info-box {
   margin: 0 1em;
   width: 100%;
+  height: 200px;
 
+}
+.info-box a {
+  color: #222222;
+}
+.info-box a:hover {
+  text-decoration: none;
 }
 
 .online {
@@ -45,8 +53,8 @@
 
 footer {
  margin: 0;
-  min-height: 5vh;
-  background-color: #ccc;
+ min-height: 5vh;
+ background-color: #ccc;
 }
 
 button {
