--- a/pomodoroClock/app.css
+++ b/pomodoroClock/app.css
@@ -1,10 +1,13 @@
-// fonts
-@import url('https://fonts.googleapis.com/css?family=Droid+Sans+Mono');
+@font-face {
+  font-family: 'Droid Sans Mono';
+  src: url('https://fonts.googleapis.com/css?family=Droid+Sans+Mono');
+}
 
-// variables
-$success: hsl(141, 71%, 48%);
-$danger: hsl(348, 100%, 61%);
-$warning: hsl(48, 100%, 67%);
+:root {
+  --success: hsl(141, 71%, 48%);
+  --danger: hsl(348, 100%, 61%);
+  --warning: hsl(48, 100%, 67%);
+}
 
 .container {
   display: flex;
@@ -12,90 +15,95 @@ $warning: hsl(48, 100%, 67%);
   justify-content: center;
   height: 100vh;
   flex-direction: column;
-  h1 {
-    margin-bottom: 2rem;
-    font-weight: 800;
-  }
 }
+
+.container h1 {
+  margin-bottom: 2rem;
+  font-weight: 800;
+}
+
 .pomodoro {
   width: 600px;
+}
 
-  h2 {
-    font-size: 2rem;
-  }
+.pomodoro h2 {
+  font-size: 2rem;
+}
 
-  .input-field {
-    font-size: 40px;
-    margin: 0 20px;
-    width: 80px;
-    text-align: center;
-  }
+.pomodoro .input-field {
+  font-size: 40px;
+  margin: 0 20px;
+  width: 80px;
+  text-align: center;
+}
 
-  .settings {
-    display: flex;
-  }
-  .text {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
-  }
+.pomodoro .settings {
+  display: flex;
+}
 
-  .volume {
-    height: 4rem;
-    justify-content: center;
-    display: flex;
-    width: 100%;
-    align-items: center;
-  }
+.pomodoro .text {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+}
 
-  .break, .session {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .break {
-    color: $success;
-  }
+.pomodoro .volume {
+  height: 4rem;
+  justify-content: center;
+  display: flex;
+  width: 100%;
+  align-items: center;
+}
 
-  .session {
-    color: $danger;
-  }
+.pomodoro .break,
+.pomodoro .session {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .clock {
-    display: flex;
-    justify-content: center;
-    margin: 50px 0;
-    cursor: pointer;
+.pomodoro .break {
+  color: var(--success)
+}
 
-    .circle {
-      width: 400px;
-      height: 400px;
-      border: 12px solid $warning;
-      border-radius: 50%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      font-size: 5rem;
-      cursor: pointer;
+.session {
+  color: var(--danger);
+}
 
-      span {
-        font-size: 3rem;
-      }
+.clock {
+  display: flex;
+  justify-content: center;
+  margin: 50px 0;
+  cursor: pointer;
+}
 
-      .time {
-        font-family: 'Droid Sans Mono', monospace;
-      }
-    }
-  }
-  .reset {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-  }
+.clock .circle {
+  width: 400px;
+  height: 400px;
+  border: 12px solid var(--warning);
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 5rem;
+  cursor: pointer;
+}
+
+.clock span {
+  font-size: 3rem;
+}
+
+.clock .time {
+  font-family: 'Droid Sans Mono', monospace;
+}
+
+.reset {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .fa {
@@ -112,67 +120,66 @@ $warning: hsl(48, 100%, 67%);
 @media all and (max-width: 768px) {
   .pomodoro {
     width: 400px;
-    .clock {
-      .circle {
-        width: 380px;
-        height: 380px;
-      }
-    }
-    .input-field {
-      margin-left: 0.125rem;
-      margin-right: 0.125rem;
-    }
-    h2 {
-      font-size: 1.5rem;
-    }
   }
+  .pomodoro .clock .circle {
+    width: 380px;
+    height: 380px;
+  }
+}
+
+.input-field {
+  margin-left: 0.125rem;
+  margin-right: 0.125rem;
+}
+
+h2 {
+  font-size: 1.5rem;
 }
 
 @media all and (max-width: 500px) {
   .container {
     height: 100%;
-
-    h1 {
-      font-size: 2rem;
-      margin: 1rem 0;
-    }
+  }
+  h1 {
+    font-size: 2rem;
+    margin: 1rem 0;
   }
   .fa {
     font-size: 1.75rem;
   }
-
   .pomodoro {
     width: 320px;
-
-    .input-field {
-      margin-left: 0;
-      margin-right: 0;
-      width: 4rem;
-    }
-
-    .volume {
-      height: 2rem;
-      justify-content: center;
-      display: flex;
-      width: 100%;
-      align-items: center;
-    }
-
-    .clock {
-      margin: 1rem 0;
-      .circle {
-        width: 250px;
-        height: 250px;
-        font-size: 2.5rem;
-
-        span {
-          font-size: 2rem;
-        }
-      }
-    }
-    .progress {
-      padding: 0 0.25rem;
-      margin-bottom: 0.75rem;
-    }
+  }
+  .pomodoro .input-field {
+    margin-left: 0;
+    margin-right: 0;
+    width: 4rem;
+  }
+  .pomodoro .volume {
+    height: 2rem;
+    justify-content: center;
+    display: flex;
+    width: 100%;
+    align-items: center;
+  }
+  .pomodoro .clock {
+    margin: 1rem 0;
+  }
+  .pomodoro .clock .circle {
+    width: 250px;
+    height: 250px;
+    font-size: 2.5rem;
+  }
+  .pomodoro .clock .circle .span {
+    font-size: 2rem;
   }
 }
+
+.progress {
+  padding: 0 0.25rem;
+  margin-bottom: 0.75rem;
+}
+
+
+
+
